--- a/_site.yml
+++ b/_site.yml
@@ -6,4 +6,6 @@ navbar:
       href: index.html
     - text: "STATA Analysis"
       href: Stata.html
+    - text: "Links"
+      href: Links.html
 output_dir: "docs"
